# [[ Add Modules ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/SyntaxHighlighterModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/FileIOModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ClipboardModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ProxyModule")

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Modules ]]
